[package]
name = "tsar-client"
version = "0.0.11"
description = "Depricated. Please use `tsar-sdk` crate instead."
repository = "https://github.com/tsar-sec/rust-sdk-old"
keywords = []
categories = []
authors = ["x <x@tsar.cc>"]
homepage = "https://tsar.cc/"
edition = "2021"
license = "MIT"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
